# reversi

./: .gitignore  CMakeLists.txt  README.md
ConsoleReversi/: ConsoleView.cpp  ConsoleView.h  EasyComputerPlayer.cpp  EasyComputerPlayer.h  ReversiGameConsoleView.cpp  ReversiGameConsoleView.h  helpers.h  main.cpp  pit.cpp
Engine/: Engine.cpp  Engine.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  PlayerInterface.cpp  PlayerInterface.h  Tile.cpp  Tile.h  ViewInterface.cpp  ViewInterface.h  constants.h  helpers.h
Engine/Ai/: AiEvaluationPlayer.cpp  AiEvaluationPlayer.h  AiHeuristicPlayer.cpp  AiHeuristicPlayer.h  AiHeuristicPlayer2.cpp  AiHeuristicPlayer2.h  AiPlayerTimed.cpp  AiPlayerTimed.h  AlphaBetaPlayer.cpp  AlphaBetaPlayer.h  EasyComputerPlayer.cpp  EasyComputerPlayer.h  MonteCarloPlayer.cpp  MonteCarloPlayer.h  MonteCarloTreePlayer.cpp  MonteCarloTreePlayer.h  NegamaxPlayer.cpp  NegamaxPlayer.h
Engine/Ai/Abstract/: AiEvaluationPlayer.cpp  AiEvaluationPlayer.h  AiPlayerTimed.cpp  AiPlayerTimed.h  heuristics.cpp  heuristics.h
Engine/Ai/Testing/: AiHeuristicPlayer2.cpp  AiHeuristicPlayer2.h  AlphaBetaPlayer.cpp  AlphaBetaPlayer.h
Engine/Containers/: Board.cpp  Board.h  Direction.h  Tile.cpp  Tile.h  edges.h
ReversiGameEngine/: Engine.cpp  Engine.h  Player.cpp  Player.h  ReversiGameEngine.cpp  ReversiGameEngine.h  ReversiGameView.cpp  ReversiGameView.h  ViewInterface.cpp  ViewInterface.h
UnitTests/: ReversiGameTestEngine.cpp  ReversiGameTestEngine.h  TestEngine.cpp  TestEngine.h  tests.cpp
pit/: NullView.cpp  NullView.h  pit.cpp
